--- a/style.css
+++ b/style.css
@@ -18,3 +18,17 @@ header h1 {
 	font-size: 100px;
 	color: khaki;
 }
+
+.brushes h2 {
+	background-color: mediumspringgreen;
+	color: white;
+	font-family: Helvetica;
+	font-size: 32px;
+	font-weight: bold;
+}
+
+.brushes.cost {
+	color: blue;
+	font-family: Helvetica;
+	font-weight: bold;
+}
