--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
 	box-sizing: border-box;
 }
 
-body {
-	margin: 0 auto;
-}
-
 header {
 	background-image: url('pattern.jpeg');
 	background-size: cover;
@@ -31,4 +27,5 @@ header h1 {
 	color: blue;
 	font-family: Helvetica;
 	font-weight: bold;
+	display: inline;
 }
