--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+body {
+	font-family: Arial;
+}
+
 header {
 	background-image: url('pattern.jpeg');
 	background-size: cover;
@@ -23,9 +27,8 @@ header h1 {
 	font-weight: bold;
 }
 
-.brushes.cost {
+span {
 	color: blue;
 	font-family: Helvetica;
 	font-weight: bold;
-	display: inline;
 }
