--- a/style.css
+++ b/style.css
@@ -19,12 +19,19 @@ header h1 {
 	color: khaki;
 }
 
-.brushes h2 {
-	background-color: mediumspringgreen;
+h2 {
 	color: white;
 	font-family: Helvetica;
 	font-size: 32px;
 	font-weight: bold;
+}
+
+.brushes h2 {
+	background-color: mediumspringgreen;
+}
+
+.frames h2 {
+	background-color: lightcoral;
 }
 
 span {
